# FXModel

./: .env.example  Dockerfile  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/: deploy.yml
.github/workflows/: deploy-ec2-ci-ssh.yml  deploy-ec2-scp.yml  deploy.yml  deployment.yml  main.yml  try.yml  try2.yml
app/: main.py
app/core/: db_config.py
app/dbmodels/: base.py
app/ml_models/: ml_model.py
app/models/: ml_model.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
prisma/: schema.prisma
